Fixed style bug in wiki_edition.css (wrong width for empty/new pages)

--- a/www/css/wiki_edition.css
+++ b/www/css/wiki_edition.css
@@ -3,7 +3,7 @@
 	border: none;
 }
 #wrapper {
-	width: auto;
+	width: 100%;
 	margin: 0;
 }
 #content_edition {
